--- a/plugin.css
+++ b/plugin.css
@@ -17,3 +17,22 @@
     margin-left: 20px;
     color: #666;
 }
+
+.slideTextError {
+    display: table;
+    margin: 2px 0;
+    border: 1px solid #f33;
+    background-color: #fee;
+}
+.slideTextError div {
+    display: table-cell;
+    padding: 2px 6px;
+    color: white;
+    background-color: #f33;
+    height: inherit;
+}
+.slideTextError span {
+    display: table-cell;
+    padding: 2px 4px;
+    color: #f33;
+}
