--- a/plugin.css
+++ b/plugin.css
@@ -6,13 +6,14 @@
     cursor: pointer;
     margin-bottom: 5px;
     color: #000;
+    display: inline-block;
 }
 
 .question h3 {
     color: #000;
 }
 
-.question div {
+.question .answere {
     display: none;
     margin-left: 20px;
     color: #666;
